# kubernetes-stubs

./: .gitmodules  MAINTAINER.md  pyproject.toml
.github/workflows/: release.yml
codegen/: __main__.py
kubernetes-stubs/client/: __init__.pyi
kubernetes-stubs/client/api/: WellKnown_api.pyi  __init__.pyi  admissionregistration_api.pyi  admissionregistration_v1_api.pyi  admissionregistration_v1alpha1_api.pyi  admissionregistration_v1beta1_api.pyi  apiextensions_api.pyi  apiextensions_v1_api.pyi  apiextensions_v1beta1_api.pyi  apiregistration_api.pyi  apiregistration_v1_api.pyi  apiregistration_v1beta1_api.pyi  apis_api.pyi  apps_api.pyi  apps_v1_api.pyi  apps_v1beta1_api.pyi  apps_v1beta2_api.pyi  auditregistration_api.pyi  auditregistration_v1alpha1_api.pyi  authentication_api.pyi  authentication_v1_api.pyi  authentication_v1alpha1_api.pyi  authentication_v1beta1_api.pyi  authorization_api.pyi  authorization_v1_api.pyi  authorization_v1beta1_api.pyi  autoscaling_api.pyi  autoscaling_v1_api.pyi  autoscaling_v2_api.pyi  autoscaling_v2beta1_api.pyi  autoscaling_v2beta2_api.pyi  batch_api.pyi  batch_v1_api.pyi  batch_v1beta1_api.pyi  batch_v2alpha1_api.pyi  certificates_api.pyi  certificates_v1_api.pyi  certificates_v1beta1_api.pyi  coordination_api.pyi  coordination_v1_api.pyi  (+49 more)
kubernetes-stubs/client/models/: __init__.pyi  admissionregistration_v1_service_reference.pyi  admissionregistration_v1_webhook_client_config.pyi  (+914 more)
kubernetes-stubs/config/: __init__.pyi
kubernetes-stubs/utils/: __init__.pyi  create_from_yaml.pyi  quantity.pyi
kubernetes_ext/: __init__.py
(+3 files in other folders)
